<resources>
    <string name="app_name">Notes</string>
    <string name="dummy_text">Note description</string>
    <string name="add">Add</string>
    <string name="search_notes">Search Note</string>
    <string name="title">Title</string>
    <string name="content">Description</string>
    <string name="home_placeholder_text">No Notes Found</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="create_at">Create at %s</string>
    <string name="created_at">Created at %s</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="default_web_client_id">956126337192-mjpp7c7444728k0b5so0nuh0m088j8nm.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
</resources>