<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/md_theme_surface"
        tools:context=".presentation.screen.notes_list_screen.NotesListFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_primary"
            android:fitsSystemWindows="true"
            android:elevation="6dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <EditText
                        android:id="@+id/note_search_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/search_edt_background"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="4dp"
                        android:layout_marginEnd="8dp"
                        android:drawableTint="@color/md_theme_inverseSurface"
                        android:ems="10"
                        android:hint="@string/search_notes"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColor="@color/md_theme_inverseSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/settings_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="autofill" />

                    <ImageButton
                        android:id="@+id/settings_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_settings"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/md_theme_inverseOnSurface"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notes_list_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="2"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.32999998">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/home_placeholder_image_view"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_placeholder_note"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/md_theme_primary"
                        tools:ignore="ContentDescription" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/home_placeholder_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_placeholder_text"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@id/home_placeholder_image_view"
                        app:layout_constraintStart_toStartOf="@id/home_placeholder_image_view"
                        app:layout_constraintTop_toBottomOf="@+id/home_placeholder_image_view" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_note_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            android:textSize="18sp"
            app:iconTint="@color/md_theme_surface"
            android:textColor="@color/md_theme_surface"
            android:backgroundTint="@color/md_theme_primary"
            app:icon="@drawable/ic_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>